--- a/web/index.html
+++ b/web/index.html
@@ -45,52 +45,48 @@
   <!-- /Yandex.Metrika counter -->
 </head>
 
-<body class="font-body">
+<body>
   <noscript>
     <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
 
-  <header>
-    <div class="container py-12">
-      <div class="hidden md:block pt-40"></div>
-      <div class="hidden sm:block md:hidden pt-20"></div>
-      <div class="flex mt-12 justify-center">
-        <div class="w-2/3 lg:justify-center">
-          <h1 class="uppercase text-white text-center lg:text-start text-7xl tracking-widest">
-            Hikehub
-          </h1>
-          <p class="text-3xl font-semibold text-white text-center lg:text-start mb-2 leading-tight">
+  <div class="container-fluid-bs" id="header">
+    <div class="container-bs py-5-bs">
+      <div class="row-bs d-none-bs d-md-block-bs" style="padding-top: 10rem;"></div>
+      <div class="row-bs d-none-bs d-sm-block-bs d-md-none-bs" style="padding-top: 5rem;"></div>
+      <div class="row-bs mt-5-bs justify-content-center-bs">
+        <div class="col-md-8-bs justify-content-lg-center-bs">
+          <h1 class="display-2-bs text-uppercase-bs text-white-bs text-center-bs text-lg-start-bs">Hikehub</h1>
+          <p class="h2-bs text-white-bs text-center-bs text-lg-start-bs">
             Сервис для подготовки еды в&nbsp;поход.<br />
             Собирайте питание умно и&nbsp;легко.
           </p>
-          <div class="flex mt-6">
-            <div class="lg:w-1/2 pr-3">
-              <a class="block leading-6 text-center cursor-pointer select-none transition-colors p-2 md:p-4 no-underline btn-primary btn-lg font-display" href="/auth/signup">Регистрация</a>
+          <div class="row-bs mt-4-bs">
+            <div class="col-lg-6-bs mb-3-bs">
+              <a class="btn-bs btn-primary-bs btn-lg-bs p-2-bs p-md-3-bs d-block-bs" href="/auth/signup">Регистрация</a>
             </div>
-            <div class="lg:w-1/2 pl-3">
-              <a class="block leading-6 text-center cursor-pointer select-none transition-colors p-2 md:p-4 no-underline btn-secondary btn-lg font-display" href="/auth/login">Вход</a>
+            <div class="col-lg-6-bs">
+              <a class="btn-bs btn-secondary-bs btn-lg-bs p-2-bs p-md-3-bs d-block-bs" href="/auth/login">Вход</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </header>
+  </div>
 
-  <article>
-
-  <div class="container">
-    <div class="row pt-5 flex content-center">
-      <div class="col-md-8">
-        <img src="./static/img/2.jpg" class="w-full" />
+  <div class="container-bs">
+    <div class="row-bs pt-5-bs justify-content-center-bs">
+      <div class="col-md-8-bs">
+        <img src="./static/img/2.jpg" class="w-100-bs" />
       </div>
     </div>
-    <div class="row pt-3 flex content-center">
-      <div class="col-md-8">
+    <div class="row-bs pt-3-bs justify-content-center-bs">
+      <div class="col-md-8-bs">
         <h2>Сэкономьте свое время</h2>
       </div>
     </div>
-    <div class="row pb-5 flex content-center">
-      <div class="col-md-8">
+    <div class="row-bs pb-5-bs justify-content-center-bs">
+      <div class="col-md-8-bs">
         <p>
           Так выглядит день похода в&nbsp;<strong>HIKEHUB</strong>.
           Вместо многостраничных таблиц&nbsp;&mdash; простой сайт, где с&nbsp;первого взгляда понятно, что
@@ -107,22 +103,22 @@
     </div>
   </div>
 
-  <div class="container">
-    <div class="row pt-5 flex content-center">
-      <div class="col-md-8">
+  <div class="container-bs">
+    <div class="row-bs pt-5-bs justify-content-center-bs">
+      <div class="col-md-8-bs">
         <video width="100%" height="100%" muted="true" loop="true" autoplay>
           <source src="./static/vid/1.mp4" type="video/mp4">
           Ваш браузер не поддерживает воспроизведение видео.
         </video>
       </div>
     </div>
-    <div class="row pt-3 flex content-center">
-      <div class="col-md-8">
+    <div class="row-bs pt-3-bs justify-content-center-bs">
+      <div class="col-md-8-bs">
         <h2>Не&nbsp;тратьте время на&nbsp;поиск продуктов</h2>
       </div>
     </div>
-    <div class="row pb-5 flex content-center">
-      <div class="col-md-8">
+    <div class="row-bs pb-5-bs justify-content-center-bs">
+      <div class="col-md-8-bs">
         <p>
           В&nbsp;сервисе уже есть база продуктов, сформированная туристами.
           Выбирайте продукты из&nbsp;имеющихся или легко добавляйте свои.
@@ -132,19 +128,19 @@
     </div>
   </div>
 
-  <div class="container">
-    <div class="row pt-5 flex content-center">
-      <div class="col-md-8">
-        <img src="./static/img/3.jpg" class="w-full" />
+  <div class="container-bs">
+    <div class="row-bs pt-5-bs justify-content-center-bs">
+      <div class="col-md-8-bs">
+        <img src="./static/img/3.jpg" class="w-100-bs" />
       </div>
     </div>
-    <div class="row pt-3 flex content-center">
-      <div class="col-md-8">
+    <div class="row-bs pt-3-bs justify-content-center-bs">
+      <div class="col-md-8-bs">
         <h2>Упростите покупки</h2>
       </div>
     </div>
-    <div class="row pb-5 flex content-center">
-      <div class="col-md-8">
+    <div class="row-bs pb-5-bs justify-content-center-bs">
+      <div class="col-md-8-bs">
         <p>
           Сайт автоматически считает количество продуктов, которые вы&nbsp;добавляете в&nbsp;меню и&nbsp;создает список
           покупок.
@@ -156,88 +152,72 @@
     </div>
   </div>
 
-  </article>
-
-  <footer class="container-fluid py-5">
-    <div class="container">
-      <div class="row flex content-center pb-2">
-        <div class="col-md-8 text-white">
-          <h2 class="text-center text-lg-start">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
+  <div class="container-fluid-bs py-5-bs" id="footer">
+    <div class="container-bs">
+      <div class="row-bs justify-content-center-bs pb-2-bs">
+        <div class="col-md-8-bs text-white-bs">
+          <h2 class="text-center-bs text-lg-start-bs">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
         </div>
       </div>
-      <div class="row pb-5">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 col-lg-6">
-          <a class="btn btn-primary btn-lg p-3 d-block" href="/auth/signup">Регистрация</a>
+      <div class="row-bs pb-5-bs">
+        <div class="col-md-2-bs"></div>
+        <div class="col-md-8-bs col-lg-6-bs">
+          <a class="btn-bs btn-primary-bs btn-lg-bs p-3-bs d-block-bs" href="/auth/signup">Регистрация</a>
         </div>
       </div>
-      <div class="flex">
-        <div class="col-sm-2"></div>
-        <div class="col-md-8">
-          <p class="text-white">
-            Дизайн сайта выполнен <a class="text-white" href="https://t.me/RinaYudina">Ириной</a>.
+      <div class="row-bs">
+        <div class="col-sm-2-bs"></div>
+        <div class="col-md-8-bs">
+          <p class="text-white-bs">
+            Дизайн сайта выполнен <a class="text-white-bs" href="https://t.me/RinaYudina">Ириной</a>.
           </p>
-          <p class="text-white">
-            У нас есть <a class="text-white" href="/info.html">страница</a> со&nbsp;всякой
+          <p class="text-white-bs">
+            У нас есть <a class="text-white-bs" href="/info.html">страница</a> со&nbsp;всякой
             дополнительной информацией и&nbsp;документами.
           </p>
-          <p class="text-white">Поделитесь ссылкой на&nbsp;сайт в&nbsp;соцсетях. Это поможет развитию проекта.</p>
-          <div class="hidden md:block">
-            <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/vk.svg" width="40" height="40" class="bg-blue-500 hover:bg-blue-900 rounded transition-colors">
-            </a>
-            <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/telegram.svg" width="40" height="40" class="bg-blue-500 hover:bg-blue-900 rounded transition-colors">
-            </a>
-            <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/facebook.svg" width="40" height="40" class="bg-blue-500 hover:bg-blue-900 rounded transition-colors">
-            </a>
-            <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/twitter.svg" width="40" height="40" class="bg-blue-500 hover:bg-blue-900 rounded transition-colors">
-            </a>
-            <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/viber.svg" width="40" height="40" class="bg-blue-500 hover:bg-blue-900 rounded transition-colors">
-            </a>
-            <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/whatsapp.svg" width="40" height="40" class="bg-blue-500 hover:bg-blue-900 rounded transition-colors">
-            </a>
+          <p class="text-white-bs">Поделитесь ссылкой на&nbsp;сайт в&nbsp;соцсетях. Это поможет развитию проекта.</p>
+          <div class="d-none-bs d-md-block-bs">
+            <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
+              target="_blank"><img src="https://static.addtoany.com/buttons/vk.svg" width="40" height="40"
+                class="share-button-bs"></a>
+            <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
+              target="_blank"><img src="https://static.addtoany.com/buttons/telegram.svg" width="40" height="40"
+                class="share-button-bs"></a>
+            <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
+              target="_blank"><img src="https://static.addtoany.com/buttons/facebook.svg" width="40" height="40"
+                class="share-button-bs"></a>
+            <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
+              target="_blank"><img src="https://static.addtoany.com/buttons/twitter.svg" width="40" height="40"
+                class="share-button-bs"></a>
+            <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
+              target="_blank"><img src="https://static.addtoany.com/buttons/viber.svg" width="40" height="40"
+                class="share-button-bs"></a>
+            <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
+              target="_blank"><img src="https://static.addtoany.com/buttons/whatsapp.svg" width="40" height="40"
+                class="share-button-bs"></a>
           </div>
         </div>
       </div>
-      <div class="flex md:hidden">
-        <div class="col">
-          <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/vk.svg" class="bg-blue-500 hover:bg-blue-900 rounded transition-colors">
-          </a>
-        </div>
-        <div class="col">
-          <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/telegram.svg" class="bg-blue-500 hover:bg-blue-900 rounded transition-colors">
-          </a>
-        </div>
-        <div class="col">
-          <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/facebook.svg" class="bg-blue-500 hover:bg-blue-900 rounded transition-colors">
-          </a>
-        </div>
-        <div class="col">
-          <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/twitter.svg" class="bg-blue-500 hover:bg-blue-900 rounded transition-colors">
-          </a>
-        </div>
-        <div class="col">
-          <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/viber.svg" class="bg-blue-500 hover:bg-blue-900 rounded transition-colors">
-          </a>
-        </div>
-        <div class="col">
-          <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/whatsapp.svg" class="bg-blue-500 hover:bg-blue-900 rounded transition-colors">
-          </a>
-        </div>
+      <div class="row-bs d-flex-bs d-md-none-bs">
+        <div class="col-bs"><a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
+            target="_blank"><img src="https://static.addtoany.com/buttons/vk.svg" class="share-button-bs"></a></div>
+        <div class="col-bs"><a
+            href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
+            target="_blank"><img src="https://static.addtoany.com/buttons/telegram.svg" class="share-button-bs"></a></div>
+        <div class="col-bs"><a
+            href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
+            target="_blank"><img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button-bs"></a></div>
+        <div class="col-bs"><a
+            href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
+            target="_blank"><img src="https://static.addtoany.com/buttons/twitter.svg" class="share-button-bs"></a></div>
+        <div class="col-bs"><a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
+            target="_blank"><img src="https://static.addtoany.com/buttons/viber.svg" class="share-button-bs"></a></div>
+        <div class="col-bs"><a
+            href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
+            target="_blank"><img src="https://static.addtoany.com/buttons/whatsapp.svg" class="share-button-bs"></a></div>
       </div>
     </div>
-  </footer>
+  </div>
 </body>
 
 </html>
