Add rows + justify-content-center

--- a/web/index.html
+++ b/web/index.html
@@ -50,7 +50,7 @@
     <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
 
-  <div class="container-fluid-bs" id="header">
+  <header class="container-fluid-bs">
     <div class="container-bs py-5-bs">
       <div class="row-bs d-none-bs d-md-block-bs" style="padding-top: 10rem;"></div>
       <div class="row-bs d-none-bs d-sm-block-bs d-md-none-bs" style="padding-top: 5rem;"></div>
@@ -72,87 +72,91 @@
         </div>
       </div>
     </div>
-  </div>
+  </header>
 
-  <div class="container-bs">
-    <div class="row-bs pt-5-bs justify-content-center-bs">
-      <div class="col-md-8-bs">
-        <img src="./static/img/2.jpg" class="w-100-bs" />
-      </div>
-    </div>
-    <div class="row-bs pt-3-bs justify-content-center-bs">
-      <div class="col-md-8-bs">
-        <h2>Сэкономьте свое время</h2>
-      </div>
-    </div>
-    <div class="row-bs pb-5-bs justify-content-center-bs">
-      <div class="col-md-8-bs">
-        <p>
-          Так выглядит день похода в&nbsp;<strong>HIKEHUB</strong>.
-          Вместо многостраничных таблиц&nbsp;&mdash; простой сайт, где с&nbsp;первого взгляда понятно, что
-          вы&nbsp;будете есть.
-          Сервис сам посчитает калорийность, пищевую ценность и&nbsp;вес продуктов.
-          Автоматически составит список покупок и&nbsp;отчет для фасовки.
-          Вам остается придумать меню и&nbsp;добавить продукты.
-        </p>
-        <!-- <p>
-          А&nbsp;<a href="https://hikehub.ru/meals/wmALVrLq528">вот так</a> выглядит пример
-          настоящего похода в&nbsp;приложении:
-        </p> -->
-      </div>
-    </div>
-  </div>
+  <article>
 
-  <div class="container-bs">
-    <div class="row-bs pt-5-bs justify-content-center-bs">
-      <div class="col-md-8-bs">
-        <video width="100%" height="100%" muted="true" loop="true" autoplay>
-          <source src="./static/vid/1.mp4" type="video/mp4">
-          Ваш браузер не поддерживает воспроизведение видео.
-        </video>
+    <div class="container-bs">
+      <div class="row-bs pt-5-bs justify-content-center-bs">
+        <div class="col-md-8-bs">
+          <img src="./static/img/2.jpg" class="w-100-bs" />
+        </div>
+      </div>
+      <div class="row-bs pt-3-bs justify-content-center-bs">
+        <div class="col-md-8-bs">
+          <h2>Сэкономьте свое время</h2>
+        </div>
+      </div>
+      <div class="row-bs pb-5-bs justify-content-center-bs">
+        <div class="col-md-8-bs">
+          <p>
+            Так выглядит день похода в&nbsp;<strong>HIKEHUB</strong>.
+            Вместо многостраничных таблиц&nbsp;&mdash; простой сайт, где с&nbsp;первого взгляда понятно, что
+            вы&nbsp;будете есть.
+            Сервис сам посчитает калорийность, пищевую ценность и&nbsp;вес продуктов.
+            Автоматически составит список покупок и&nbsp;отчет для фасовки.
+            Вам остается придумать меню и&nbsp;добавить продукты.
+          </p>
+          <!-- <p>
+            А&nbsp;<a href="https://hikehub.ru/meals/wmALVrLq528">вот так</a> выглядит пример
+            настоящего похода в&nbsp;приложении:
+          </p> -->
+        </div>
       </div>
     </div>
-    <div class="row-bs pt-3-bs justify-content-center-bs">
-      <div class="col-md-8-bs">
-        <h2>Не&nbsp;тратьте время на&nbsp;поиск продуктов</h2>
-      </div>
-    </div>
-    <div class="row-bs pb-5-bs justify-content-center-bs">
-      <div class="col-md-8-bs">
-        <p>
-          В&nbsp;сервисе уже есть база продуктов, сформированная туристами.
-          Выбирайте продукты из&nbsp;имеющихся или легко добавляйте свои.
-          Когда вы&nbsp;добавляете продукты в&nbsp;базу, они становятся доступными для всех пользователей.
-        </p>
-      </div>
-    </div>
-  </div>
 
-  <div class="container-bs">
-    <div class="row-bs pt-5-bs justify-content-center-bs">
-      <div class="col-md-8-bs">
-        <img src="./static/img/3.jpg" class="w-100-bs" />
+    <div class="container-bs">
+      <div class="row-bs pt-5-bs justify-content-center-bs">
+        <div class="col-md-8-bs">
+          <video width="100%" height="100%" muted="true" loop="true" autoplay>
+            <source src="./static/vid/1.mp4" type="video/mp4">
+            Ваш браузер не поддерживает воспроизведение видео.
+          </video>
+        </div>
+      </div>
+      <div class="row-bs pt-3-bs justify-content-center-bs">
+        <div class="col-md-8-bs">
+          <h2>Не&nbsp;тратьте время на&nbsp;поиск продуктов</h2>
+        </div>
+      </div>
+      <div class="row-bs pb-5-bs justify-content-center-bs">
+        <div class="col-md-8-bs">
+          <p>
+            В&nbsp;сервисе уже есть база продуктов, сформированная туристами.
+            Выбирайте продукты из&nbsp;имеющихся или легко добавляйте свои.
+            Когда вы&nbsp;добавляете продукты в&nbsp;базу, они становятся доступными для всех пользователей.
+          </p>
+        </div>
       </div>
     </div>
-    <div class="row-bs pt-3-bs justify-content-center-bs">
-      <div class="col-md-8-bs">
-        <h2>Упростите покупки</h2>
-      </div>
-    </div>
-    <div class="row-bs pb-5-bs justify-content-center-bs">
-      <div class="col-md-8-bs">
-        <p>
-          Сайт автоматически считает количество продуктов, которые вы&nbsp;добавляете в&nbsp;меню и&nbsp;создает список
-          покупок.
-          Откройте список на&nbsp;смартфоне или распечатайте, чтобы взять с&nbsp;собой в&nbsp;магазин.
-          Ведите заметки, чтобы распределить покупки и&nbsp;не&nbsp;забыть, если каких-то продуктов не&nbsp;оказалось
-          в&nbsp;магазине.
-        </p>
-      </div>
-    </div>
-  </div>
 
-  <div class="container-fluid-bs py-5-bs" id="footer">
+    <div class="container-bs">
+      <div class="row-bs pt-5-bs justify-content-center-bs">
+        <div class="col-md-8-bs">
+          <img src="./static/img/3.jpg" class="w-100-bs" />
+        </div>
+      </div>
+      <div class="row-bs pt-3-bs justify-content-center-bs">
+        <div class="col-md-8-bs">
+          <h2>Упростите покупки</h2>
+        </div>
+      </div>
+      <div class="row-bs pb-5-bs justify-content-center-bs">
+        <div class="col-md-8-bs">
+          <p>
+            Сайт автоматически считает количество продуктов, которые вы&nbsp;добавляете в&nbsp;меню и&nbsp;создает список
+            покупок.
+            Откройте список на&nbsp;смартфоне или распечатайте, чтобы взять с&nbsp;собой в&nbsp;магазин.
+            Ведите заметки, чтобы распределить покупки и&nbsp;не&nbsp;забыть, если каких-то продуктов не&nbsp;оказалось
+            в&nbsp;магазине.
+          </p>
+        </div>
+      </div>
+    </div>
+
+  </article>
+
+  <footer class="container-fluid-bs py-5-bs">
     <div class="container-bs">
       <div class="row-bs justify-content-center-bs pb-2-bs">
         <div class="col-md-8-bs text-white-bs">
@@ -217,7 +221,7 @@
             target="_blank"><img src="https://static.addtoany.com/buttons/whatsapp.svg" class="share-button-bs"></a></div>
       </div>
     </div>
-  </div>
+  </footer>
 </body>
 
 </html>
