Format bottom panel

--- a/web/index.html
+++ b/web/index.html
@@ -181,44 +181,58 @@
           </p>
           <p class="text-white-bs">Поделитесь ссылкой на&nbsp;сайт в&nbsp;соцсетях. Это поможет развитию проекта.</p>
           <div class="d-none-bs d-md-block-bs">
-            <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-              target="_blank"><img src="https://static.addtoany.com/buttons/vk.svg" width="40" height="40"
-                class="share-button-bs"></a>
-            <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-              target="_blank"><img src="https://static.addtoany.com/buttons/telegram.svg" width="40" height="40"
-                class="share-button-bs"></a>
-            <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-              target="_blank"><img src="https://static.addtoany.com/buttons/facebook.svg" width="40" height="40"
-                class="share-button-bs"></a>
-            <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-              target="_blank"><img src="https://static.addtoany.com/buttons/twitter.svg" width="40" height="40"
-                class="share-button-bs"></a>
-            <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-              target="_blank"><img src="https://static.addtoany.com/buttons/viber.svg" width="40" height="40"
-                class="share-button-bs"></a>
-            <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-              target="_blank"><img src="https://static.addtoany.com/buttons/whatsapp.svg" width="40" height="40"
-                class="share-button-bs"></a>
+            <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+              <img src="https://static.addtoany.com/buttons/vk.svg" width="40" height="40" class="share-button-bs">
+            </a>
+            <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+              <img src="https://static.addtoany.com/buttons/telegram.svg" width="40" height="40" class="share-button-bs">
+            </a>
+            <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+              <img src="https://static.addtoany.com/buttons/facebook.svg" width="40" height="40" class="share-button-bs">
+            </a>
+            <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+              <img src="https://static.addtoany.com/buttons/twitter.svg" width="40" height="40" class="share-button-bs">
+            </a>
+            <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+              <img src="https://static.addtoany.com/buttons/viber.svg" width="40" height="40" class="share-button-bs">
+            </a>
+            <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+              <img src="https://static.addtoany.com/buttons/whatsapp.svg" width="40" height="40" class="share-button-bs">
+            </a>
           </div>
         </div>
       </div>
       <div class="row-bs d-flex-bs d-md-none-bs">
-        <div class="col-bs"><a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-            target="_blank"><img src="https://static.addtoany.com/buttons/vk.svg" class="share-button-bs"></a></div>
-        <div class="col-bs"><a
-            href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-            target="_blank"><img src="https://static.addtoany.com/buttons/telegram.svg" class="share-button-bs"></a></div>
-        <div class="col-bs"><a
-            href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-            target="_blank"><img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button-bs"></a></div>
-        <div class="col-bs"><a
-            href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-            target="_blank"><img src="https://static.addtoany.com/buttons/twitter.svg" class="share-button-bs"></a></div>
-        <div class="col-bs"><a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-            target="_blank"><img src="https://static.addtoany.com/buttons/viber.svg" class="share-button-bs"></a></div>
-        <div class="col-bs"><a
-            href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-            target="_blank"><img src="https://static.addtoany.com/buttons/whatsapp.svg" class="share-button-bs"></a></div>
+        <div class="col-bs">
+          <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+            <img src="https://static.addtoany.com/buttons/vk.svg" class="share-button-bs">
+          </a>
+        </div>
+        <div class="col-bs">
+          <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+            <img src="https://static.addtoany.com/buttons/telegram.svg" class="share-button-bs">
+          </a>
+        </div>
+        <div class="col-bs">
+          <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+            <img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button-bs">
+          </a>
+        </div>
+        <div class="col-bs">
+          <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+            <img src="https://static.addtoany.com/buttons/twitter.svg" class="share-button-bs">
+          </a>
+        </div>
+        <div class="col-bs">
+          <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+            <img src="https://static.addtoany.com/buttons/viber.svg" class="share-button-bs">
+          </a>
+        </div>
+        <div class="col-bs">
+          <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+            <img src="https://static.addtoany.com/buttons/whatsapp.svg" class="share-button-bs">
+          </a>
+        </div>
       </div>
     </div>
   </footer>
