Add more styles + remove some -bs

--- a/web/index.html
+++ b/web/index.html
@@ -56,8 +56,8 @@
       <div class="row-bs d-none-bs d-sm-block-bs d-md-none-bs" style="padding-top: 5rem;"></div>
       <div class="row-bs mt-5-bs justify-content-center-bs">
         <div class="col-md-8-bs justify-content-lg-center-bs">
-          <h1 class="display-2-bs text-uppercase-bs text-white-bs text-center-bs text-lg-start-bs">Hikehub</h1>
-          <p class="h2-bs text-white-bs text-center-bs text-lg-start-bs">
+          <h1 class="display-2-bs text-uppercase-bs text-white text-center-bs text-lg-start-bs">Hikehub</h1>
+          <p class="h2-bs text-white text-center-bs text-lg-start-bs">
             Сервис для подготовки еды в&nbsp;поход.<br />
             Собирайте питание умно и&nbsp;легко.
           </p>
@@ -159,7 +159,7 @@
   <footer class="container-fluid-bs py-5-bs">
     <div class="container-bs">
       <div class="row-bs justify-content-center-bs pb-2-bs">
-        <div class="col-md-8-bs text-white-bs">
+        <div class="col-md-8-bs text-white">
           <h2 class="text-center-bs text-lg-start-bs">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
         </div>
       </div>
@@ -172,14 +172,14 @@
       <div class="row-bs">
         <div class="col-sm-2-bs"></div>
         <div class="col-md-8-bs">
-          <p class="text-white-bs">
-            Дизайн сайта выполнен <a class="text-white-bs" href="https://t.me/RinaYudina">Ириной</a>.
+          <p class="text-white">
+            Дизайн сайта выполнен <a class="text-white" href="https://t.me/RinaYudina">Ириной</a>.
           </p>
-          <p class="text-white-bs">
-            У нас есть <a class="text-white-bs" href="/info.html">страница</a> со&nbsp;всякой
+          <p class="text-white">
+            У нас есть <a class="text-white" href="/info.html">страница</a> со&nbsp;всякой
             дополнительной информацией и&nbsp;документами.
           </p>
-          <p class="text-white-bs">Поделитесь ссылкой на&nbsp;сайт в&nbsp;соцсетях. Это поможет развитию проекта.</p>
+          <p class="text-white">Поделитесь ссылкой на&nbsp;сайт в&nbsp;соцсетях. Это поможет развитию проекта.</p>
           <div class="d-none-bs d-md-block-bs">
             <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
               <img src="https://static.addtoany.com/buttons/vk.svg" width="40" height="40" class="share-button-bs">
