Remove more -bs styles

--- a/web/index.html
+++ b/web/index.html
@@ -54,7 +54,7 @@
     <div class="container-bs py-5-bs">
       <div class="row-bs d-none-bs d-md-block-bs" style="padding-top: 10rem;"></div>
       <div class="row-bs d-none-bs d-sm-block-bs d-md-none-bs" style="padding-top: 5rem;"></div>
-      <div class="row-bs mt-5-bs justify-content-center-bs">
+      <div class="row-bs mt-5-bs justify-center">
         <div class="col-md-8-bs justify-content-lg-center-bs">
           <h1 class="display-2-bs text-uppercase-bs text-white text-center-bs text-lg-start-bs">Hikehub</h1>
           <p class="h2-bs text-white text-center-bs text-lg-start-bs">
@@ -77,17 +77,17 @@
   <article>
 
     <div class="container-bs">
-      <div class="row-bs pt-5-bs justify-content-center-bs">
+      <div class="row-bs pt-5-bs justify-center">
         <div class="col-md-8-bs">
           <img src="./static/img/2.jpg" class="w-100-bs" />
         </div>
       </div>
-      <div class="row-bs pt-3-bs justify-content-center-bs">
+      <div class="row-bs pt-3-bs justify-center">
         <div class="col-md-8-bs">
           <h2>Сэкономьте свое время</h2>
         </div>
       </div>
-      <div class="row-bs pb-5-bs justify-content-center-bs">
+      <div class="row-bs pb-5-bs justify-center">
         <div class="col-md-8-bs">
           <p>
             Так выглядит день похода в&nbsp;<strong>HIKEHUB</strong>.
@@ -106,7 +106,7 @@
     </div>
 
     <div class="container-bs">
-      <div class="row-bs pt-5-bs justify-content-center-bs">
+      <div class="row-bs pt-5-bs justify-center">
         <div class="col-md-8-bs">
           <video width="100%" height="100%" muted="true" loop="true" autoplay>
             <source src="./static/vid/1.mp4" type="video/mp4">
@@ -114,12 +114,12 @@
           </video>
         </div>
       </div>
-      <div class="row-bs pt-3-bs justify-content-center-bs">
+      <div class="row-bs pt-3-bs justify-center">
         <div class="col-md-8-bs">
           <h2>Не&nbsp;тратьте время на&nbsp;поиск продуктов</h2>
         </div>
       </div>
-      <div class="row-bs pb-5-bs justify-content-center-bs">
+      <div class="row-bs pb-5-bs justify-center">
         <div class="col-md-8-bs">
           <p>
             В&nbsp;сервисе уже есть база продуктов, сформированная туристами.
@@ -131,17 +131,17 @@
     </div>
 
     <div class="container-bs">
-      <div class="row-bs pt-5-bs justify-content-center-bs">
+      <div class="row-bs pt-5-bs justify-center">
         <div class="col-md-8-bs">
           <img src="./static/img/3.jpg" class="w-100-bs" />
         </div>
       </div>
-      <div class="row-bs pt-3-bs justify-content-center-bs">
+      <div class="row-bs pt-3-bs justify-center">
         <div class="col-md-8-bs">
           <h2>Упростите покупки</h2>
         </div>
       </div>
-      <div class="row-bs pb-5-bs justify-content-center-bs">
+      <div class="row-bs pb-5-bs justify-center">
         <div class="col-md-8-bs">
           <p>
             Сайт автоматически считает количество продуктов, которые вы&nbsp;добавляете в&nbsp;меню и&nbsp;создает список
@@ -158,7 +158,7 @@
 
   <footer class="container-fluid-bs py-5-bs">
     <div class="container-bs">
-      <div class="row-bs justify-content-center-bs pb-2-bs">
+      <div class="row-bs justify-center pb-2-bs">
         <div class="col-md-8-bs text-white">
           <h2 class="text-center-bs text-lg-start-bs">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
         </div>
