--- a/web/index.html
+++ b/web/index.html
@@ -215,7 +215,7 @@
         </div>
         <div class="col-bs">
           <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button-bs">
+            <img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button-bs" width="66">
           </a>
         </div>
         <div class="col-bs">
