Replace margin utilities

--- a/web/index.html
+++ b/web/index.html
@@ -51,18 +51,18 @@
   </noscript>
 
   <header class="container-fluid-bs">
-    <div class="container-bs py-5-bs">
+    <div class="container-bs py-12">
       <div class="row-bs d-none-bs d-md-block-bs" style="padding-top: 10rem;"></div>
       <div class="row-bs d-none-bs d-sm-block-bs d-md-none-bs" style="padding-top: 5rem;"></div>
-      <div class="row-bs mt-5-bs justify-center">
+      <div class="row-bs mt-12 justify-center">
         <div class="col-md-8-bs justify-content-lg-center-bs">
           <h1 class="display-2-bs text-uppercase-bs text-white text-center-bs text-lg-start-bs">Hikehub</h1>
           <p class="h2-bs text-white text-center-bs text-lg-start-bs">
             Сервис для подготовки еды в&nbsp;поход.<br />
             Собирайте питание умно и&nbsp;легко.
           </p>
-          <div class="row-bs mt-4-bs">
-            <div class="col-lg-6-bs mb-3-bs">
+          <div class="row-bs mt-6">
+            <div class="col-lg-6-bs mb-4">
               <a class="btn-bs btn-primary-bs btn-lg-bs p-2-bs p-md-3-bs d-block-bs" href="/auth/signup">Регистрация</a>
             </div>
             <div class="col-lg-6-bs">
@@ -87,7 +87,7 @@
           <h2>Сэкономьте свое время</h2>
         </div>
       </div>
-      <div class="row-bs pb-5-bs justify-center">
+      <div class="row-bs pb-12 justify-center">
         <div class="col-md-8-bs">
           <p>
             Так выглядит день похода в&nbsp;<strong>HIKEHUB</strong>.
@@ -119,7 +119,7 @@
           <h2>Не&nbsp;тратьте время на&nbsp;поиск продуктов</h2>
         </div>
       </div>
-      <div class="row-bs pb-5-bs justify-center">
+      <div class="row-bs pb-12 justify-center">
         <div class="col-md-8-bs">
           <p>
             В&nbsp;сервисе уже есть база продуктов, сформированная туристами.
@@ -141,7 +141,7 @@
           <h2>Упростите покупки</h2>
         </div>
       </div>
-      <div class="row-bs pb-5-bs justify-center">
+      <div class="row-bs pb-12 justify-center">
         <div class="col-md-8-bs">
           <p>
             Сайт автоматически считает количество продуктов, которые вы&nbsp;добавляете в&nbsp;меню и&nbsp;создает список
@@ -156,17 +156,17 @@
 
   </article>
 
-  <footer class="container-fluid-bs py-5-bs">
+  <footer class="container-fluid-bs py-12">
     <div class="container-bs">
-      <div class="row-bs justify-center pb-2-bs">
+      <div class="row-bs justify-center p-2">
         <div class="col-md-8-bs text-white">
           <h2 class="text-center-bs text-lg-start-bs">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
         </div>
       </div>
-      <div class="row-bs pb-5-bs">
+      <div class="row-bs pb-12">
         <div class="col-md-2-bs"></div>
         <div class="col-md-8-bs col-lg-6-bs">
-          <a class="btn-bs btn-primary-bs btn-lg-bs p-3-bs d-block-bs" href="/auth/signup">Регистрация</a>
+          <a class="btn-bs btn-primary-bs btn-lg-bs p-4 d-block-bs" href="/auth/signup">Регистрация</a>
         </div>
       </div>
       <div class="row-bs">
