--- a/web/index.html
+++ b/web/index.html
@@ -63,10 +63,10 @@
           </p>
           <div class="row-bs mt-6">
             <div class="col-lg-6-bs mb-4">
-              <a class="btn-bs btn-primary-bs btn-lg-bs p-2-bs p-md-3-bs d-block-bs" href="/auth/signup">Регистрация</a>
+              <a class="btn-bs btn-primary-bs btn-lg-bs p-2 md:p-4 d-block-bs" href="/auth/signup">Регистрация</a>
             </div>
             <div class="col-lg-6-bs">
-              <a class="btn-bs btn-secondary-bs btn-lg-bs p-2-bs p-md-3-bs d-block-bs" href="/auth/login">Вход</a>
+              <a class="btn-bs btn-secondary-bs btn-lg-bs p-2 md:p-4 d-block-bs" href="/auth/login">Вход</a>
             </div>
           </div>
         </div>
@@ -75,14 +75,13 @@
   </header>
 
   <article>
-
     <div class="container-bs">
-      <div class="row-bs pt-5-bs justify-center">
+      <div class="row-bs pt-12 justify-center">
         <div class="col-md-8-bs">
-          <img src="./static/img/2.jpg" class="w-100-bs" />
+          <img src="./static/img/2.jpg" class="w-full" />
         </div>
       </div>
-      <div class="row-bs pt-3-bs justify-center">
+      <div class="row-bs pt-4 justify-center">
         <div class="col-md-8-bs">
           <h2>Сэкономьте свое время</h2>
         </div>
@@ -106,7 +105,7 @@
     </div>
 
     <div class="container-bs">
-      <div class="row-bs pt-5-bs justify-center">
+      <div class="row-bs pt-12 justify-center">
         <div class="col-md-8-bs">
           <video width="100%" height="100%" muted="true" loop="true" autoplay>
             <source src="./static/vid/1.mp4" type="video/mp4">
@@ -114,7 +113,7 @@
           </video>
         </div>
       </div>
-      <div class="row-bs pt-3-bs justify-center">
+      <div class="row-bs pt-4 justify-center">
         <div class="col-md-8-bs">
           <h2>Не&nbsp;тратьте время на&nbsp;поиск продуктов</h2>
         </div>
@@ -131,12 +130,12 @@
     </div>
 
     <div class="container-bs">
-      <div class="row-bs pt-5-bs justify-center">
+      <div class="row-bs pt-12 justify-center">
         <div class="col-md-8-bs">
-          <img src="./static/img/3.jpg" class="w-100-bs" />
+          <img src="./static/img/3.jpg" class="w-full" />
         </div>
       </div>
-      <div class="row-bs pt-3-bs justify-center">
+      <div class="row-bs pt-4 justify-center">
         <div class="col-md-8-bs">
           <h2>Упростите покупки</h2>
         </div>
@@ -153,7 +152,6 @@
         </div>
       </div>
     </div>
-
   </article>
 
   <footer class="container-fluid-bs py-12">
