--- a/web/index.html
+++ b/web/index.html
@@ -52,8 +52,8 @@
 
   <header class="container-fluid-bs">
     <div class="container-bs py-12">
-      <div class="row-bs d-none-bs d-md-block-bs" style="padding-top: 10rem;"></div>
-      <div class="row-bs d-none-bs d-sm-block-bs d-md-none-bs" style="padding-top: 5rem;"></div>
+      <div class="row-bs hidden md:block" style="padding-top: 10rem;"></div>
+      <div class="row-bs hidden sm:block md:hidden" style="padding-top: 5rem;"></div>
       <div class="row-bs mt-12 justify-center">
         <div class="col-md-8-bs justify-content-lg-center-bs">
           <h1 class="display-2-bs text-uppercase-bs text-white text-center-bs text-lg-start-bs">Hikehub</h1>
@@ -63,10 +63,10 @@
           </p>
           <div class="row-bs mt-6">
             <div class="col-lg-6-bs mb-4">
-              <a class="btn-bs btn-primary-bs btn-lg-bs p-2 md:p-4 d-block-bs" href="/auth/signup">Регистрация</a>
+              <a class="btn-bs btn-primary-bs btn-lg-bs p-2 md:p-4 block" href="/auth/signup">Регистрация</a>
             </div>
             <div class="col-lg-6-bs">
-              <a class="btn-bs btn-secondary-bs btn-lg-bs p-2 md:p-4 d-block-bs" href="/auth/login">Вход</a>
+              <a class="btn-bs btn-secondary-bs btn-lg-bs p-2 md:p-4 block" href="/auth/login">Вход</a>
             </div>
           </div>
         </div>
@@ -164,7 +164,7 @@
       <div class="row-bs pb-12">
         <div class="col-md-2-bs"></div>
         <div class="col-md-8-bs col-lg-6-bs">
-          <a class="btn-bs btn-primary-bs btn-lg-bs p-4 d-block-bs" href="/auth/signup">Регистрация</a>
+          <a class="btn-bs btn-primary-bs btn-lg-bs p-4 block" href="/auth/signup">Регистрация</a>
         </div>
       </div>
       <div class="row-bs">
@@ -178,7 +178,7 @@
             дополнительной информацией и&nbsp;документами.
           </p>
           <p class="text-white">Поделитесь ссылкой на&nbsp;сайт в&nbsp;соцсетях. Это поможет развитию проекта.</p>
-          <div class="d-none-bs d-md-block-bs">
+          <div class="hidden md:block">
             <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
               <img src="https://static.addtoany.com/buttons/vk.svg" width="40" height="40" class="share-button-bs">
             </a>
@@ -200,7 +200,7 @@
           </div>
         </div>
       </div>
-      <div class="row-bs d-flex-bs d-md-none-bs">
+      <div class="row-bs flex md:hidden">
         <div class="col-bs">
           <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
             <img src="https://static.addtoany.com/buttons/vk.svg" class="share-button-bs">
