--- a/web/index.html
+++ b/web/index.html
@@ -63,10 +63,10 @@
           </p>
           <div class="row-bs mt-6">
             <div class="col-lg-6-bs mb-4">
-              <a class="btn-bs btn-primary-bs btn-lg-bs p-2 md:p-4 block" href="/auth/signup">Регистрация</a>
+              <a class="btn-bs btn-primary-bs btn-lg-bs p-2 md:p-4 block no-underline font-display" href="/auth/signup">Регистрация</a>
             </div>
             <div class="col-lg-6-bs">
-              <a class="btn-bs btn-secondary-bs btn-lg-bs p-2 md:p-4 block" href="/auth/login">Вход</a>
+              <a class="btn-bs btn-secondary-bs btn-lg-bs p-2 md:p-4 block no-underline font-display" href="/auth/login">Вход</a>
             </div>
           </div>
         </div>
@@ -164,7 +164,7 @@
       <div class="row-bs pb-12">
         <div class="col-md-2-bs"></div>
         <div class="col-md-8-bs col-lg-6-bs">
-          <a class="btn-bs btn-primary-bs btn-lg-bs p-4 block" href="/auth/signup">Регистрация</a>
+          <a class="btn-bs btn-primary-bs btn-lg-bs p-4 block no-underline font-display" href="/auth/signup">Регистрация</a>
         </div>
       </div>
       <div class="row-bs">
