--- a/web/index.html
+++ b/web/index.html
@@ -52,16 +52,16 @@
 
   <header class="container-fluid-bs">
     <div class="container-bs py-12">
-      <div class="row-bs hidden md:block" style="padding-top: 10rem;"></div>
-      <div class="row-bs hidden sm:block md:hidden" style="padding-top: 5rem;"></div>
-      <div class="row-bs mt-12 justify-center">
-        <div class="col-md-8-bs justify-content-lg-center-bs">
-          <h1 class="display-2-bs text-uppercase-bs text-white text-center-bs text-lg-start-bs">Hikehub</h1>
+      <div class="row-bs mt-0 hidden md:block" style="padding-top: 10rem;"></div>
+      <div class="row-bs mt-0 hidden sm:block md:hidden" style="padding-top: 5rem;"></div>
+      <div class="row-bs mt-0 mt-12 justify-center">
+        <div class="col-md-8 justify-content-lg-center-bs">
+          <h1 class="display-2-bs uppercase text-white text-center-bs text-lg-start-bs">Hikehub</h1>
           <p class="h2-bs text-white text-center-bs text-lg-start-bs">
             Сервис для подготовки еды в&nbsp;поход.<br />
             Собирайте питание умно и&nbsp;легко.
           </p>
-          <div class="row-bs mt-6">
+          <div class="row-bs mt-0 mt-6">
             <div class="col-lg-6-bs mb-4">
               <a class="btn-bs btn-primary-bs btn-lg-bs p-2 md:p-4 block no-underline font-display" href="/auth/signup">Регистрация</a>
             </div>
@@ -76,18 +76,18 @@
 
   <article>
     <div class="container-bs">
-      <div class="row-bs pt-12 justify-center">
-        <div class="col-md-8-bs">
+      <div class="row-bs mt-0 pt-12 justify-center">
+        <div class="col-md-8">
           <img src="./static/img/2.jpg" class="w-full" />
         </div>
       </div>
-      <div class="row-bs pt-4 justify-center">
-        <div class="col-md-8-bs">
+      <div class="row-bs mt-0 pt-4 justify-center">
+        <div class="col-md-8">
           <h2>Сэкономьте свое время</h2>
         </div>
       </div>
-      <div class="row-bs pb-12 justify-center">
-        <div class="col-md-8-bs">
+      <div class="row-bs mt-0 pb-12 justify-center">
+        <div class="col-md-8">
           <p>
             Так выглядит день похода в&nbsp;<strong>HIKEHUB</strong>.
             Вместо многостраничных таблиц&nbsp;&mdash; простой сайт, где с&nbsp;первого взгляда понятно, что
@@ -105,21 +105,21 @@
     </div>
 
     <div class="container-bs">
-      <div class="row-bs pt-12 justify-center">
-        <div class="col-md-8-bs">
+      <div class="row-bs mt-0 pt-12 justify-center">
+        <div class="col-md-8">
           <video width="100%" height="100%" muted="true" loop="true" autoplay>
             <source src="./static/vid/1.mp4" type="video/mp4">
             Ваш браузер не поддерживает воспроизведение видео.
           </video>
         </div>
       </div>
-      <div class="row-bs pt-4 justify-center">
-        <div class="col-md-8-bs">
+      <div class="row-bs mt-0 pt-4 justify-center">
+        <div class="col-md-8">
           <h2>Не&nbsp;тратьте время на&nbsp;поиск продуктов</h2>
         </div>
       </div>
-      <div class="row-bs pb-12 justify-center">
-        <div class="col-md-8-bs">
+      <div class="row-bs mt-0 pb-12 justify-center">
+        <div class="col-md-8">
           <p>
             В&nbsp;сервисе уже есть база продуктов, сформированная туристами.
             Выбирайте продукты из&nbsp;имеющихся или легко добавляйте свои.
@@ -130,18 +130,18 @@
     </div>
 
     <div class="container-bs">
-      <div class="row-bs pt-12 justify-center">
-        <div class="col-md-8-bs">
+      <div class="row-bs mt-0 pt-12 justify-center">
+        <div class="col-md-8">
           <img src="./static/img/3.jpg" class="w-full" />
         </div>
       </div>
-      <div class="row-bs pt-4 justify-center">
-        <div class="col-md-8-bs">
+      <div class="row-bs mt-0 pt-4 justify-center">
+        <div class="col-md-8">
           <h2>Упростите покупки</h2>
         </div>
       </div>
-      <div class="row-bs pb-12 justify-center">
-        <div class="col-md-8-bs">
+      <div class="row-bs mt-0 pb-12 justify-center">
+        <div class="col-md-8">
           <p>
             Сайт автоматически считает количество продуктов, которые вы&nbsp;добавляете в&nbsp;меню и&nbsp;создает список
             покупок.
@@ -156,20 +156,20 @@
 
   <footer class="container-fluid-bs py-12">
     <div class="container-bs">
-      <div class="row-bs justify-center p-2">
-        <div class="col-md-8-bs text-white">
+      <div class="row-bs mt-0 justify-center p-2">
+        <div class="col-md-8 text-white">
           <h2 class="text-center-bs text-lg-start-bs">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
         </div>
       </div>
-      <div class="row-bs pb-12">
+      <div class="row-bs mt-0 pb-12">
         <div class="col-md-2-bs"></div>
-        <div class="col-md-8-bs col-lg-6-bs">
+        <div class="col-md-8 col-lg-6-bs">
           <a class="btn-bs btn-primary-bs btn-lg-bs p-4 block no-underline font-display" href="/auth/signup">Регистрация</a>
         </div>
       </div>
-      <div class="row-bs">
+      <div class="row-bs mt-0">
         <div class="col-sm-2-bs"></div>
-        <div class="col-md-8-bs">
+        <div class="col-md-8">
           <p class="text-white">
             Дизайн сайта выполнен <a class="text-white" href="https://t.me/RinaYudina">Ириной</a>.
           </p>
@@ -180,55 +180,55 @@
           <p class="text-white">Поделитесь ссылкой на&nbsp;сайт в&nbsp;соцсетях. Это поможет развитию проекта.</p>
           <div class="hidden md:block">
             <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/vk.svg" width="40" height="40" class="share-button-bs">
+              <img src="https://static.addtoany.com/buttons/vk.svg" width="40" height="40" class="share-button">
             </a>
             <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/telegram.svg" width="40" height="40" class="share-button-bs">
+              <img src="https://static.addtoany.com/buttons/telegram.svg" width="40" height="40" class="share-button">
             </a>
             <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/facebook.svg" width="40" height="40" class="share-button-bs">
+              <img src="https://static.addtoany.com/buttons/facebook.svg" width="40" height="40" class="share-button">
             </a>
             <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/twitter.svg" width="40" height="40" class="share-button-bs">
+              <img src="https://static.addtoany.com/buttons/twitter.svg" width="40" height="40" class="share-button">
             </a>
             <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/viber.svg" width="40" height="40" class="share-button-bs">
+              <img src="https://static.addtoany.com/buttons/viber.svg" width="40" height="40" class="share-button">
             </a>
             <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/whatsapp.svg" width="40" height="40" class="share-button-bs">
+              <img src="https://static.addtoany.com/buttons/whatsapp.svg" width="40" height="40" class="share-button">
             </a>
           </div>
         </div>
       </div>
-      <div class="row-bs flex md:hidden">
+      <div class="row-bs mt-0 flex md:hidden">
         <div class="col-bs">
           <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/vk.svg" class="share-button-bs">
+            <img src="https://static.addtoany.com/buttons/vk.svg" class="share-button">
           </a>
         </div>
         <div class="col-bs">
           <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/telegram.svg" class="share-button-bs">
+            <img src="https://static.addtoany.com/buttons/telegram.svg" class="share-button">
           </a>
         </div>
         <div class="col-bs">
           <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button-bs" width="66">
+            <img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button" width="66">
           </a>
         </div>
         <div class="col-bs">
           <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/twitter.svg" class="share-button-bs">
+            <img src="https://static.addtoany.com/buttons/twitter.svg" class="share-button">
           </a>
         </div>
         <div class="col-bs">
           <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/viber.svg" class="share-button-bs">
+            <img src="https://static.addtoany.com/buttons/viber.svg" class="share-button">
           </a>
         </div>
         <div class="col-bs">
           <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/whatsapp.svg" class="share-button-bs">
+            <img src="https://static.addtoany.com/buttons/whatsapp.svg" class="share-button">
           </a>
         </div>
       </div>
