Replace text utilities

--- a/web/index.html
+++ b/web/index.html
@@ -45,7 +45,7 @@
   <!-- /Yandex.Metrika counter -->
 </head>
 
-<body>
+<body class="font-body">
   <noscript>
     <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
@@ -55,9 +55,9 @@
       <div class="row-bs mt-0 hidden md:block" style="padding-top: 10rem;"></div>
       <div class="row-bs mt-0 hidden sm:block md:hidden" style="padding-top: 5rem;"></div>
       <div class="row-bs mt-0 mt-12 justify-center">
-        <div class="col-md-8 justify-content-lg-center-bs">
-          <h1 class="display-2-bs uppercase text-white text-center-bs text-lg-start-bs">Hikehub</h1>
-          <p class="h2-bs text-white text-center-bs text-lg-start-bs">
+        <div class="col-md-8 lg:content-center">
+          <h1 class="display-2-bs uppercase text-white text-center lg:text-left">Hikehub</h1>
+          <p class="h2-bs text-white text-center lg:text-left">
             Сервис для подготовки еды в&nbsp;поход.<br />
             Собирайте питание умно и&nbsp;легко.
           </p>
@@ -158,7 +158,7 @@
     <div class="container-bs">
       <div class="row-bs mt-0 justify-center p-2">
         <div class="col-md-8 text-white">
-          <h2 class="text-center-bs text-lg-start-bs">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
+          <h2 class="text-center lg:text-left">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
         </div>
       </div>
       <div class="row-bs mt-0 pb-12">
